**9.1.0 (unreleased)**


**9.0.0 (2016-11-02)**

* **BACKWARD INCOMPATIBLE** Remove the attempted autodetection of requirement
  names from URLs, URLs must include a name via `#egg=`.

* **DEPRECATION** ``pip install --egg`` have been deprecated and will be
  removed in the future. This "feature" has a long list of drawbacks where it
  breaks almost all of pip's other features in subtle and hard to diagnose
  ways.

* Add a pip check command to check installed packages dependencies
  (:pull:`3750`).

* Added option to allow user to abort pip operation if file/directory exists

* Added Appveyor CI

* Uninstall existing packages when performing an editable installation of
  the same packages (:issue:`1548`).

* Pip show is less verbose by default. `--verbose` prints multiline fields.
  (:pull:`3858`).

* Added optional column formatting to ``pip list`` (:issue:`3651`).

* Add `--not-required` option to ``pip list`` to list packages that are
  not dependencies of other packages.

* Fix the build on systems with symlinked /tmp directory for custom
  builds such as numpy (:pull:`3701`).

* Fix regression in pip freeze: when there is more than one git remote,
  priority is given to the remote named origin (:pull:`3708`, :issue:`3616`).

* Fix crash when calling pip freeze with invalid requirement installed
  (:pull:`3704`, :issue:`3681`).

* Support multiple --requirement files in pip freeze (:pull:`3703`).

* Implementation of pep-503 ``data-requires-python``. When this field is
  present for a release link, pip will ignore the download when
  installing to a Python version that doesn't satisfy the requirement.

* Pip wheel now works on editable packages too (it was only working on
  editable dependencies before); this allows running pip wheel on the result
  of pip freeze in presence of editable requirements (:pull:`3695`,
  :issue:`3291`).

* Load credentials from .netrc files (:pull:`3715`, :issue:`3569`).
